--- a/multi_agent_pong.ipynb
+++ b/multi_agent_pong.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP7+Yl/MTih+wFkqBYWbQJh",
+      "authorship_tag": "ABX9TyOThbvc9Qd2wwJzmTF6g7fv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "AMdVyAoTjRko"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Up2wL9hbjvFC",
+        "outputId": "7602241a-1c37-4d30-e3f4-06194a5e4d73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Gv2xK4QMj5dC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
